# quickmail

./: LICENSE  README.md  main.py  pyproject.toml
src/quickmail/: __init__.py  account.py  mail.py  util.py
